--- a/less/navigation.less
+++ b/less/navigation.less
@@ -15,10 +15,15 @@
             font-size: 4rem;
             padding-bottom: 1%;
         }
-        a {
-        font-size: 2rem;
+        nav {
+            width: 60%;
+            .center;
+            justify-content: space-evenly;
+            a {
+        font-size: 1.6rem;
         color: @nav-font;
         text-decoration: none;
+            }
         
         }
     }
